--- a/index.html
+++ b/index.html
@@ -503,8 +503,96 @@
         </div>
       </div>
     </footer>
+    <!-- Menu window -->
+<div class="backdrop-menu is-open">
+    <div class="menu-window">
+      <button class="btn-close-modal btn-close-menu" type="button">
+        <svg class="icon-btn-close" width="8" height="8">
+          <use href="./images/icons.svg#icon-close-black"></use>
+        </svg>
+      </button>
+      <ul class="navigation">
+            <li>
+              <a class="link link-studio current-page-link" href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a class="link link-portfolio" href="">Portfolio</a>
+            </li>
+            <li>
+              <a class="link link-contacts" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="address-nav">
+            <li>
+              <a class="link-address" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a class="link-address" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <div class="soc-contacts">
+          <p class="title-soclist-footer">Social media</p>
+          <ul class="icon-soclink-list-footer icon-menu">
+            <li class="icon-soclink">
+              <a
+                class="link-icon"
+                href=""
+                target="_blank"
+                aria-label="instagram"
+              >
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-soclink">
+              <a class="link-icon" href="" target="_blank" aria-label="twitter">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-soclink">
+              <a
+                class="link-icon"
+                href=""
+                target="_blank"
+                aria-label="facebook"
+              >
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-soclink">
+              <a
+                class="link-icon"
+                href=""
+                target="_blank"
+                aria-label="linkedin"
+              >
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+    </div>
+</div>
+
+
     <!-- Modal window  -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal-window">
         <button class="btn-close-modal" type="button">
           <svg class="icon-btn-close" width="8" height="8">
@@ -579,14 +667,17 @@
               name="user-privacy"
               value="true"
             />
-            <label class="user-privacy-text" for="user-privacy"
-              ><span class="checking-box">
+            <label class="user-privacy-text" for="user-privacy">
+              <span class="checking-box">
                 <svg class="checking-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-property-click"></use>
-                </svg> </span
-              >I accept the terms and conditions of the
-              <a class="privacy-link" href="">Privacy Policy</a>
+                </svg>
+              </span>
             </label>
+            <p class="box-text-privacy">
+              I accept the terms and conditions of the
+              <a class="privacy-link" href="">Privacy Policy</a>
+            </p>
           </div>
           <button class="btn-send-modal" type="submit">Send</button>
         </form>
@@ -595,31 +686,3 @@
   </body>
 </html>
 
-<!-- <ul class="navigation">
-            <li>
-              <a class="link link-studio current-page-link" href="./index.html"
-                >Studio</a
-              >
-            </li>
-            <li>
-              <a class="link link-portfolio" href="">Portfolio</a>
-            </li>
-            <li>
-              <a class="link link-contacts" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="contacts">
-          <ul class="address-nav">
-            <li>
-              <a class="link-address" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="link-address" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address> -->
