--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
       </div>
     </footer>
     <!-- Menu window -->
-<div class="backdrop-menu is-open">
+<div class="backdrop-menu">
     <div class="menu-window">
       <button class="btn-close-modal btn-close-menu" type="button">
         <svg class="icon-btn-close" width="8" height="8">
@@ -512,35 +512,34 @@
         </svg>
       </button>
       <ul class="navigation">
-            <li>
-              <a class="link link-studio current-page-link" href="./index.html"
-                >Studio</a
-              >
-            </li>
-            <li>
-              <a class="link link-portfolio" href="">Portfolio</a>
-            </li>
-            <li>
-              <a class="link link-contacts" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="contacts">
-          <ul class="address-nav">
-            <li>
-              <a class="link-address" href="tel:+110001111111"
+        <li>
+          <a class="link link-studio current-page-link" href="./index.html"
+                >Studio</a>
+        </li>
+        <li>
+          <a class="link link-portfolio" href="">Portfolio</a>
+        </li>
+        <li>
+          <a class="link link-contacts" href="">Contacts</a>
+        </li>
+      </ul>
+      </nav>
+      <address class="contacts">
+        <ul class="address-nav">
+          <li>
+            <a class="link-address" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
-            </li>
-            <li>
-              <a class="link-address" href="mailto:info@devstudio.com"
+          </li>
+          <li>
+            <a class="link-address" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
-            </li>
-          </ul>
-        </address>
-        <div class="soc-contacts">
-          <p class="title-soclist-footer">Social media</p>
+          </li>
+        </ul>
+      </address>
+      <div class="soc-contacts">
+        <p class="title-soclist-footer">Social media</p>
           <ul class="icon-soclink-list-footer icon-menu">
             <li class="icon-soclink">
               <a
@@ -586,11 +585,9 @@
               </a>
             </li>
           </ul>
-        </div>
+      </div>
     </div>
 </div>
-
-
     <!-- Modal window  -->
     <div class="backdrop">
       <div class="modal-window">
