--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
           <ul class="team-box-items">
             <li class="team-member-card">
               <img
-                src="./images/img.jpg"
+                srcset="./images/team/mark.jpg, ./images/team/mark@2x.jpg"
+                src="./images/team/mark.jpg"
                 alt="Photo of Mark Guerrero"
-                width="264"
-                height="260"
+
               />
               <div class="text-team-member-card">
                 <h3 class="team-member">Mark Guerrero</h3>
@@ -153,10 +153,10 @@
             </li>
             <li class="team-member-card">
               <img
-                src="./images/img-2.jpg"
+              srcset="./images/team/tom.jpg, ./images/team/tom@2x.jpg"
+                src="./images/team/tom.jpg"
                 alt="Photo of Tom Ford"
-                width="264"
-                height="260"
+
               />
               <div class="text-team-member-card">
                 <h3 class="team-member">Tom Ford</h3>
@@ -215,10 +215,10 @@
             </li>
             <li class="team-member-card">
               <img
-                src="./images/img-3.jpg"
+              srcset="./images/team/camila.jpg, ./images/team/camila@2x.jpg"
+                src="./images/team/camila.jpg"
                 alt="Photo of Camila Garcia"
-                width="264"
-                height="260"
+
               />
               <div class="text-team-member-card">
                 <h3 class="team-member">Camila Garcia</h3>
@@ -277,10 +277,10 @@
             </li>
             <li class="team-member-card">
               <img
-                src="./images/img-4.jpg"
+              srcset="./images/team/daniel.jpg, ./images/team/daniel@2x.jpg"
+                src="./images/team/daniel.jpg"
                 alt="Photo of Daniel Wilson"
-                width="264"
-                height="260"
+
               />
               <div class="text-team-member-card">
                 <h3 class="team-member">Daniel Wilson</h3>
@@ -347,10 +347,10 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <img
-                src="./images/img00.jpg"
+              srcset="./images/portfolio/bankingapp.jpg, /images/portfolio/bankingapp@2x.jpg"
+                src="./images/portfolio/bankingapp.jpg"
                 alt="Design of Bankapp"
-                width="288"
-                height="280"
+
               />
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Banking App</h3>
@@ -359,10 +359,10 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="./images/img11.jpg"
+              srcset="./images/portfolio/payment.jpg, ./images/portfolio/payment@2x.jpg"
+                src="./images/portfolio/payment.jpg"
                 alt="Phone scanning QR-code"
-                width="288"
-                height="280"
+
               />
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Cashless Payment</h3>
@@ -371,10 +371,10 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="./images/img22.jpg"
+              srcset="./images/portfolio/meditationapp.jpg, ./images/portfolio/meditationapp@2x.jpg"
+                src="./images/portfolio/meditationapp.jpg"
                 alt="Meditation App on Notebook and Phone "
-                width="288"
-                height="280"
+
               />
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Meditation App</h3>
@@ -383,10 +383,10 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="./images/img33.jpg"
+              srcset="./images/portfolio/taxi.jpg, ./images/portfolio/taxi@2x.jpg"
+                src="./images/portfolio/taxi.jpg"
                 alt="Car steering wheel in taxi"
-                width="288"
-                height="280"
+
               />
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Taxi Service</h3>
@@ -395,10 +395,10 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="./images/img44.jpg"
+              srcset="./images/portfolio/screenillustration.jpg, ./images/portfolio/screenillustration@2x.jpg"
+                src="./images/portfolio/screenillustration.jpg"
                 alt="Variety of screen illustration"
-                width="288"
-                height="280"
+
               />
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Screen Illustrations</h3>
@@ -407,10 +407,10 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="./images/img55.jpg"
+              srcset="./images/portfolio/onlinecurses.jpg, ./images/portfolio/onlinecurses@2x.jpg"
+                src="./images/portfolio/onlinecurses.jpg"
                 alt="Blond girl in glasses handing phone"
-                width="288"
-                height="280"
+
               />
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Online Courses</h3>
@@ -424,7 +424,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container container-footer">
-        <div class="box-logo-text">
+        <div class="box-logo-text footer-item">
           <a class="link-logo logo-footer" href="./index.html"
             >Web<span class="link-logo-studio-footer">Studio</span></a
           >
@@ -433,7 +433,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="soc-contacts">
+        <div class="soc-contacts footer-item">
           <p class="title-soclist-footer">Social media</p>
           <ul class="icon-soclink-list-footer">
             <li class="icon-soclink">
@@ -481,7 +481,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
+        <div class="footer-form footer-item">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="form-subscribe">
             <label class="label-subscribe" for="user-mail">
