--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </ul>
           </address>
           <div class="soc-contacts">
-            <p class="title-soclist-footer">Social media</p>
+            <!-- <p class="title-soclist-footer">Social media</p> -->
             <ul class="icon-soclink-list-footer icon-menu">
               <li class="icon-soclink">
                 <a
