--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
           <h2 class="features-title visually-hidden">Our Features</h2>
           <ul class="features-box">
             <li class="features-item">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="features">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -152,6 +157,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="features">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -159,6 +169,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="features">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -166,6 +181,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-box">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="features">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -433,84 +453,126 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                srcset="
-                  ./images/portfolio/bankingapp.jpg,
-                  /images/portfolio/bankingapp@2x.jpg
-                "
-                src="./images/portfolio/bankingapp.jpg"
-                alt="Design of Bankapp"
-              />
+              <div class="portfolio-pic">
+                <img
+                  srcset="
+                    ./images/portfolio/bankingapp.jpg,
+                    /images/portfolio/bankingapp@2x.jpg
+                  "
+                  src="./images/portfolio/bankingapp.jpg"
+                  alt="Design of Bankapp"
+                />
+                <p class="paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Banking App</h3>
                 <p class="service-name">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                srcset="
-                  ./images/portfolio/payment.jpg,
-                  ./images/portfolio/payment@2x.jpg
-                "
-                src="./images/portfolio/payment.jpg"
-                alt="Phone scanning QR-code"
-              />
+              <div class="portfolio-pic">
+                <img
+                  srcset="
+                    ./images/portfolio/payment.jpg,
+                    ./images/portfolio/payment@2x.jpg
+                  "
+                  src="./images/portfolio/payment.jpg"
+                  alt="Phone scanning QR-code"
+                />
+                <p class="paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Cashless Payment</h3>
                 <p class="service-name">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                srcset="
-                  ./images/portfolio/meditationapp.jpg,
-                  ./images/portfolio/meditationapp@2x.jpg
-                "
-                src="./images/portfolio/meditationapp.jpg"
-                alt="Meditation App on Notebook and Phone "
-              />
+              <div class="portfolio-pic">
+                <img
+                  srcset="
+                    ./images/portfolio/meditationapp.jpg,
+                    ./images/portfolio/meditationapp@2x.jpg
+                  "
+                  src="./images/portfolio/meditationapp.jpg"
+                  alt="Meditation App on Notebook and Phone "
+                />
+                <p class="paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Meditation App</h3>
                 <p class="service-name">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                srcset="
-                  ./images/portfolio/taxi.jpg,
-                  ./images/portfolio/taxi@2x.jpg
-                "
-                src="./images/portfolio/taxi.jpg"
-                alt="Car steering wheel in taxi"
-              />
+              <div class="portfolio-pic">
+                <img
+                  srcset="
+                    ./images/portfolio/taxi.jpg,
+                    ./images/portfolio/taxi@2x.jpg
+                  "
+                  src="./images/portfolio/taxi.jpg"
+                  alt="Car steering wheel in taxi"
+                />
+                <p class="paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Taxi Service</h3>
                 <p class="service-name">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                srcset="
-                  ./images/portfolio/screenillustration.jpg,
-                  ./images/portfolio/screenillustration@2x.jpg
-                "
-                src="./images/portfolio/screenillustration.jpg"
-                alt="Variety of screen illustration"
-              />
+              <div class="portfolio-pic">
+                <img
+                  srcset="
+                    ./images/portfolio/screenillustration.jpg,
+                    ./images/portfolio/screenillustration@2x.jpg
+                  "
+                  src="./images/portfolio/screenillustration.jpg"
+                  alt="Variety of screen illustration"
+                />
+                <p class="paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Screen Illustrations</h3>
                 <p class="service-name">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                srcset="
-                  ./images/portfolio/onlinecurses.jpg,
-                  ./images/portfolio/onlinecurses@2x.jpg
-                "
-                src="./images/portfolio/onlinecurses.jpg"
-                alt="Blond girl in glasses handing phone"
-              />
+              <div class="portfolio-pic">
+                <img
+                  srcset="
+                    ./images/portfolio/onlinecurses.jpg,
+                    ./images/portfolio/onlinecurses@2x.jpg
+                  "
+                  src="./images/portfolio/onlinecurses.jpg"
+                  alt="Blond girl in glasses handing phone"
+                />
+                <p class="paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="text-portfolio-list-item">
                 <h3 class="portfolio-service">Online Courses</h3>
                 <p class="service-name">Marketing</p>
