--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <li class="team-member-card">
               <img
                 src="./images/team/mark.jpg"
-                srcset="./images/team/mark.jpg, ./images/team/mark@2x.jpg"
+                srcset="./images/team/mark.jpg 1x, ./images/team/mark@2x.jpg 2x"
                 alt="Photo of Mark Guerrero"
               />
               <div class="text-team-member-card">
@@ -264,7 +264,7 @@
             <li class="team-member-card">
               <img
                 src="./images/team/tom.jpg"
-                srcset="./images/team/tom.jpg, ./images/team/tom@2x.jpg"
+                srcset="./images/team/tom.jpg 1x, ./images/team/tom@2x.jpg 2x"
                 alt="Photo of Tom Ford"
               />
               <div class="text-team-member-card">
@@ -325,7 +325,10 @@
             <li class="team-member-card">
               <img
                 src="./images/team/camila.jpg"
-                srcset="./images/team/camila.jpg, ./images/team/camila@2x.jpg"
+                srcset="
+                  ./images/team/camila.jpg    1x,
+                  ./images/team/camila@2x.jpg 2x
+                "
                 alt="Photo of Camila Garcia"
               />
               <div class="text-team-member-card">
@@ -386,7 +389,10 @@
             <li class="team-member-card">
               <img
                 src="./images/team/daniel.jpg"
-                srcset="./images/team/daniel.jpg, ./images/team/daniel@2x.jpg"
+                srcset="
+                  ./images/team/daniel.jpg    1x,
+                  ./images/team/daniel@2x.jpg 2x
+                "
                 alt="Photo of Daniel Wilson"
               />
               <div class="text-team-member-card">
