--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-pic">
                 <img
-                  srcset="
-                    ./images/portfolio/bankingapp.jpg,
-                    /images/portfolio/bankingapp@2x.jpg
-                  "
                   src="./images/portfolio/bankingapp.jpg"
+                  srcset="
+                    ./images/portfolio/bankingapp.jpg    1x,
+                    ./images/portfolio/bankingapp@2x.jpg 2x
+                  "
                   alt="Design of Bankapp"
                 />
                 <p class="paragraph">
@@ -482,11 +482,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-pic">
                 <img
-                  srcset="
-                    ./images/portfolio/payment.jpg,
-                    ./images/portfolio/payment@2x.jpg
-                  "
                   src="./images/portfolio/payment.jpg"
+                  srcset="
+                    ./images/portfolio/payment.jpg    1x,
+                    ./images/portfolio/payment@2x.jpg 2x
+                  "
                   alt="Phone scanning QR-code"
                 />
                 <p class="paragraph">
@@ -503,11 +503,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-pic">
                 <img
-                  srcset="
-                    ./images/portfolio/meditationapp.jpg,
-                    ./images/portfolio/meditationapp@2x.jpg
-                  "
                   src="./images/portfolio/meditationapp.jpg"
+                  srcset="
+                    ./images/portfolio/meditationapp.jpg    1x,
+                    ./images/portfolio/meditationapp@2x.jpg 2x
+                  "
                   alt="Meditation App on Notebook and Phone "
                 />
                 <p class="paragraph">
@@ -524,11 +524,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-pic">
                 <img
-                  srcset="
-                    ./images/portfolio/taxi.jpg,
-                    ./images/portfolio/taxi@2x.jpg
-                  "
                   src="./images/portfolio/taxi.jpg"
+                  srcset="
+                    ./images/portfolio/taxi.jpg    1x,
+                    ./images/portfolio/taxi@2x.jpg 2x
+                  "
                   alt="Car steering wheel in taxi"
                 />
                 <p class="paragraph">
@@ -545,11 +545,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-pic">
                 <img
-                  srcset="
-                    ./images/portfolio/screenillustration.jpg,
-                    ./images/portfolio/screenillustration@2x.jpg
-                  "
                   src="./images/portfolio/screenillustration.jpg"
+                  srcset="
+                    ./images/portfolio/screenillustration.jpg    1x,
+                    ./images/portfolio/screenillustration@2x.jpg 2x
+                  "
                   alt="Variety of screen illustration"
                 />
                 <p class="paragraph">
@@ -566,11 +566,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-pic">
                 <img
-                  srcset="
-                    ./images/portfolio/onlinecurses.jpg,
-                    ./images/portfolio/onlinecurses@2x.jpg
-                  "
                   src="./images/portfolio/onlinecurses.jpg"
+                  srcset="
+                    ./images/portfolio/onlinecurses.jpg    1x,
+                    ./images/portfolio/onlinecurses@2x.jpg 2x
+                  "
                   alt="Blond girl in glasses handing phone"
                 />
                 <p class="paragraph">
